@@ -33,7 +33,8 @@ int mingw_app_type = 0;
 
 const char *__mingw_get_crt_info (void)
 {
-  return "MinGW-W64 Runtime " MINGW64_VERSION " (" MINGW64_VERSION_STATE " - "
-	 "(rev. " __MINGW_W64_REV ") " __MINGW_W64_REV_STAMP;
+  return "MinGW-W64 Runtime " __MINGW64_VERSION " ("
+         __MINGW64_VERSION_STATE " - "
+	 "rev. " __MINGW_W64_REV ") " __MINGW_W64_REV_STAMP;
 }
 
